# variant-rc

./: .gitignore  LICENSE  README.md  pyproject.toml
variantrc/: variantrc.py
