[project]
name = "variantrc"
version = "0.2.0"
authors = [
    {name = "Michael Kaufman", email = "mlkaufman@gmail.com"},
]
description = "Tool to classify aligned sequencing reads into bins based upon distinguishing variants (SNPs and indels) found in parental sequences."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.6.1",
    "rich>=12.6.0",
    "pandas>=1.5.1",
    "pysam>=0.19.1",
    "tqdm>=4.64.1",
    "matplotlib>=3.6.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
#py-modules = [""]

[project.scripts]
variant-rc = "variantrc.variantrc:app"
